<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GENERAL -->
    <string name="app_name">SDK Explorer</string>
    <string name="menu_discount">Last Discount Received</string>
    <string name="menu_send_message">Send Message</string>
    <string name="menu_last_message">Last Message Received</string>
    <string name="menu_cloudpage_inbox">CloudPage Inbox</string>
    <string name="menu_settings">Preferences</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_eula">EULA</string>
    <string name="menu_debug_settings">Debug Settings</string>
    <string name="menu_info">Info</string>
    <string name="silent">Silent</string>
    <string name="placeholder_long">Placeholder to test until text loaded.</string>
    <string name="blank"></string>

    <!-- SETTINGS -->
    <string name="settings">Preferences</string>
    <string name="pref_configs_title">SDK Explorer Push Config</string>
    <string name="pref_personal_info_title">Attributes</string>
    <string name="pref_notify_category_title">Notifications</string>
    <string name="pref_tag_category_title">Tags</string>

    <string name="configs_list">Selected Configuration</string>
    <string name="configs_list_summ">Click to change the configuration to use for this app.</string>

    <string name="pref_first_name">First Name</string>
    <string name="pref_first_name_summ">Please enter your first name</string>

    <string name="pref_last_name">Last Name</string>
    <string name="pref_last_name_summ">Please enter your last name</string>

    <string name="pref_subscriber_key">Subscriber Key</string>
    <string name="pref_subscriber_key_summ">Please enter a subscriber key (usually email address)</string>

    <string name="pref_push">Push Notifications</string>
    <string name="pref_push_summ">Receive alert messages.</string>

    <string name="pref_location">Location Notifications</string>
    <string name="pref_location_summ">Receive alerts when you are located near a national park.</string>

    <!-- HELP -->
    <string name="configs_help">The Journey Builder for Apps (JB4A) SDK Explorer can be configured with different accounts to assist in testing and debugging.  Config files must have an extension of .pushconfig and contain a specific JSON array that will be used to set the appropriate keys to access and use your Salesforce Marketing Cloud account.</string>
    <string name="attribute_help">Attributes contain specific information about your subscribers, such as first and last name, gender, and geographical location.\n\nYou can assign specific information as part of a subscriber attribute to be used as part of sends or subscriber management.\n\nThis JB4A SDK Explorer stores first name and last name as attributes.</string>
    <string name="subscriber_key_help">Your subscriber key provides a key for the Contact Record and can be used to tie together multiple channels/devices for each Contact.</string>
    <string name="notification_help">Push and Location notifications are used to indicate whether this device is interested in receiving notifications or location messages.</string>
    <string name="tag_help">Tags are used to specify which messages a customer wishes to receive.  For example to receive messages for an interest in a particular activity.</string>
    <string name="open_direct_recipient_help">The Open Direct Recipient will be used whenever an OpenDirect url is included with a message and the customer clicks on that message.</string>
    <string name="cloudpage_recipient_help">The CloudPage Recipient will be used whenever a CloudPage is included with a message and the customer clicks on that message.</string>
    <string name="notification_recipient_help">The Notification Recipient will be used whenever a message is received and the customer clicks on that message.</string>
    <string name="device_token_help">The Device Token is assigned by the Google Cloud Messaging (GCM) service whenever pushEnabled() is called to uniquely identify this device and app to GCM.</string>
    <string name="device_id_help">The Device Id is a unique identifier for this device and is can be used by the Marketing Cloud to push messages to specific devices.</string>
    <string name="app_keys_help">The App Keys are used to uniquely identify your app with the Marketing Cloud and with Google.  The App Id and Access Token are defined in the App Center.  The GCM Id is found in the Google Developers Console.</string>
    <string name="message_keys_help">The following values are needed to send messages from this app.  These are not normally found in an app that catches Push Notifications.  But it provides a way to test this app directly.\n\nThe clientId and the clientSecret are the values found in the Salesforce Marketing Cloud App Center for the Server to Server App.</string>
    <string name="message_api_key_help">The messageId is found in the Marketing Cloud Message Center for the API Message which is a template for the message to send.  This app overrides the values in the message to customize who receives the message as well as what is included in the message.</string>

    <!-- DEBUG SETTINGS -->
    <string name="debug_pref_settings_title">Debug Settings</string>

    <string name="debug_pref_enable_debug">Enable Debug</string>
    <string name="debug_pref_enable_debug_summ_off">Debug logging is off.</string>
    <string name="debug_pref_enable_debug_summ_on">Debug logging is on.</string>

    <string name="debug_pref_collect_logcat">Email Log Data</string>
    <string name="debug_pref_collect_logcat_summ">Click to email log data.</string>

    <!-- Activities -->
    <string name="home_activity_title">SDK Explorer - Home</string>
    <string name="locations_activity_title">SDK Explorer - Locations</string>
    <string name="eula_activity_title">End User License Agreement (EULA)</string>
    <string name="send_message_activity_title">SDK Explorer - Send Message</string>
    <string name="display_last_message_activity_title">SDK Explorer - Last Message Received</string>
    <string name="display_current_message_activity_title">SDK Explorer - Message Received</string>
    <string name="discount_activity_title">SDK Explorer - Current Discount</string>
    <string name="info_activity_title">SDK Explorer - Info</string>
    <string name="settings_activity_title">SDK Explorer - Preferences</string>
    <string name="debug_settings_activity_title">SDK Explorer - Debug Settings</string>
    <string name="cloudpage_inbox_activity_title">SDK Explorer - CloudPage Inbox</string>

    <!-- Errors -->
    <string name="error_cannot_be_blank">This field cannot be blank</string>

    <!-- Alerts -->
    <string name="alert_settings1_title">Delayed Update</string>
    <string name="alert_settings1_text">Any updates to any of these Preferences will take approximately 15 minutes to take effect.  Before sending a message, you should wait 15 minutes for the new values to take effect.</string>
    <string name="alert_utils1_title">Send Log Data</string>
    <string name="alert_utils1_text">Please enter an email address to send log data.\n\nPress OK to open an email client to send this data.</string>
    <string name="alert_send_message1_text">Message submitted&#8230;</string>
    <string name="alert_utils2_text">Problem creating logcat file:\u0020</string>
    <string name="alert_utils3_text">Send debug info&#8230;</string>
    <string name="alert_utils4_text">There are no email clients installed.</string>
    <string name="alert_utils5_text">Please enable Push Notifications in Preferences before attempting to Send Messages</string>

    <!-- INTERNAL UPDATE -->
    <string name="update_title">Update SDK Explorer?</string>
    <string name="update_button">Download Now</string>

</resources>