<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/pref_personal_info_title"
            android:key="pref_personal_info_settings">

        <Preference
                android:key="prefAttributeHelp"
                android:selectable="false"
                android:title="Background"
                android:summary="@string/attribute_help"/>

        <EditTextPreference
                android:inputType="textCapWords"
                android:singleLine="true"
                android:defaultValue=""
                android:key="pref_first_name"
                android:dialogMessage="@string/pref_first_name_summ"
                android:summary="@string/pref_first_name_summ"
                android:title="@string/pref_first_name"/>

        <EditTextPreference
                android:inputType="textCapWords"
                android:singleLine="true"
                android:defaultValue=""
                android:key="pref_last_name"
                android:dialogMessage="@string/pref_last_name_summ"
                android:summary="@string/pref_last_name_summ"
                android:title="@string/pref_last_name"/>

        <Preference
                android:key="prefSubscriberKeyHelp"
                android:selectable="false"
                android:title="Background"
                android:summary="@string/subscriber_key_help"/>

        <EditTextPreference
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:defaultValue=""
                android:key="pref_subscriber_key"
                android:dialogMessage="@string/pref_subscriber_key_summ"
                android:summary="@string/pref_subscriber_key_summ"
                android:title="@string/pref_subscriber_key"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_notify_category_title"
            android:key="pref_key_notify_settings">
        <Preference
                android:key="prefNotificationHelp"
                android:selectable="false"
                android:title="Background"
                android:summary="@string/notification_help"/>

        <CheckBoxPreference
                android:key="pref_push"
                android:title="@string/pref_push"
                android:summary="@string/pref_push_summ"
                android:defaultValue="true"/>

        <CheckBoxPreference
                android:key="pref_location"
                android:title="@string/pref_location"
                android:summary="@string/pref_location_summ"
                android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_tag_category_title"
            android:key="pref_tag_help_settings">
        <Preference
                android:key="prefTagHelp"
                android:selectable="false"
                android:title="Background"
                android:summary="@string/tag_help"/>
    </PreferenceCategory>
</PreferenceScreen>